Attempted to fix image align

--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ p {
   font-size: 20px;
   text-align: center
 }
-img src="Noggin.webp" alt="You've been Gnomed!" {
+img {
   image-align: center
 }
